[package]
name = "vac-bypass"
version = "0.1.0"
edition = "2021"
description = "Educational Rust reimplementation of the original VAC bypass: steamservice patch, LoadLibraryExW + GetProcAddress + GetSystemInfo and failsafe hooks."

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
